--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "rucache"
 version = "0.1.0"
 authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
 
+[profile.release]
+debug = true
+
 [dependencies]
 enum_primitive = "0.0.2"
 byteorder = "*"
